docs: generate documentation file

--- a/src/Swolfkrow/Swolfkrow.csproj
+++ b/src/Swolfkrow/Swolfkrow.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <Authors>Rubén Campos Zurriaga</Authors>
